plugins {
    id "com.jfrog.bintray" version "1.4"
}
apply from: '../artifact.gradle'

apply plugin: 'groovy'
apply plugin: 'java'
apply plugin: 'maven'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    compile 'org.codehaus.groovy:groovy-all:2.4.5'
    compile 'ca.uhn.hapi.fhir:hapi-fhir-base:1.3'
    compile 'ca.uhn.hapi.fhir:hapi-fhir-structures-dstu2:1.3'
    testCompile group: 'junit', name: 'junit', version: '4.12'

    compile 'org.jboss.forge.roaster:roaster-api:2.17.2.Final'
    compile 'org.jboss.forge.roaster:roaster-jdt:2.17.2.Final'
    compile 'org.reflections:reflections:0.9.10'
    compile 'org.apache.commons:commons-lang3:3.4'
    compile 'com.google.guava:guava:18.0'
    compile 'commons-io:commons-io:2.4'

}

apply from: "../artifactupload.gradle"